--- a/index.css
+++ b/index.css
@@ -45,6 +45,7 @@ body {
   width: 150px;
   position: absolute;
   -webkit-animation: 20000ms moon linear;
+animation-fill-mode: forwards;
           animation: 20000ms moon linear;
 }
 
