--- a/index.css
+++ b/index.css
@@ -118,7 +118,7 @@ animation-fill-mode: forwards;
     background-color: #000;
     -webkit-transform: translate(120vh);
             transform: translate(120vh);
-opacity: 0;
+overflow: hidden;
   }
 }
 
